@@ -38,6 +38,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   if they ran roughly the same code for both hooks (as is almost certain).
 * Signature (~~~~) "cleaning", i.e. template removal, can be disabled with 
   $wgCleanSignatures=false
+* Extensions can use the SkinBuildSidebar hook to modify the content of the
+  sidebar and add custom portlets to it
 
 === Bug fixes in 1.14 ===
 
